Fixed issue with site logo width acting weird on mobile devices.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -133,6 +133,7 @@ header .container
 header img.logo
 {
   width: 120px;
+  max-width: 120px;
   margin-top: 5px;
 }
 
